--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^10.3.1",
     "openai": "^4.11.1",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
